--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>notAirbnb: Vacation Rentals, Cabins, Beach Houses, Unique Homes & No Experiences</title>
+    <title>notAirbnb: Vacation Rentals, Cabins, Beach Houses, Unique Homes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
